# rag-document-assistant

./: .dockerignore  .env  .env.example  .gitignore  Case_Study_TUSAŞ_LLM.md  DEVLOG.md  Dockerfile  README.md  Social Management Plan (SMP).md  TESTING.md  demo.txt  docker-compose.yml  document_processor.py  merkezbankası.md  merkezbankası_eng.md  pyproject.toml  requirements.txt  run.ps1  tarama_eng.md  tarama_eng2.md  tarama_tr.md  tarama_tr2.md  wiki.MD
.codex/: -home-mtastan-workspace-rag-document-assistant-Social .txt  AGENTS.md
.github/workflows/: rag_eval.yml
data/cord-v2/: dataset_infos.json
data/sessions/08b02cf4-94f3-4a78-b4ad-0e8eb003f630/: state_08b02cf4-94f3-4a78-b4ad-0e8eb003f630.json
data/sessions/131fad54-4dfd-45bb-9549-dd20a46770e4/: state_131fad54-4dfd-45bb-9549-dd20a46770e4.json
scripts/: pull_models.ps1
src/: auto_downloads_eval.py  chunk_embedding_pipeline.py  config.py  document_processor.py  download_models.py  eval_pipeline.py  faz6_eval.py  faz8_autotune_pipeline.py  faz8_diagnose.py  faz8_optimize.py  faz8_test_harness.py  generation_pipeline.py  model_catalog.py  retrieval_pipeline.py  ui_streamlit.py
src/chunk_embedding/: __init__.py  artifacts.py  chunking.py  embedding.py  pipeline.py  types.py
src/data/: benchmark_test.jsonl
src/document_processor/: __init__.py  core.py  document_io.py  markdown_tables.py  ocr_backends.py  processor.py
src/generation/: __init__.py  core.py  ollama.py  pipeline.py  prompts.py  verify.py
src/results/chunkEmbeddings/: chunks.jsonl  embeddings.npy  (+1 more)
src/retrieval/: __init__.py  cli.py  constants.py  eval.py  indexing.py  io.py  query.py  runtime.py  types.py
src/ui/: app.py  rag.py  render.py  state.py
(+181 files in other folders)
