[tool.poetry]
name = "rag-document-assistant"
version = "0.1.0"
description = "Local RAG document assistant"
authors = ["rag-team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
paddleocr = ">=3.5.0,<3.6.0"
paddlex = {version = ">=3.5.1,<3.6.0", extras = ["ocr"]}
paddlepaddle-gpu = "3.3.0"
pymupdf = ">=1.24.0"
opencv-python-headless = ">=4.10.0"
numpy = "1.26.4"
beautifulsoup4 = ">=4.12.0"
sentence-transformers = ">=3.0.0"
torch = "2.11.0+cu128"
torchvision = "0.26.0"
langchain-text-splitters = ">=0.2.0"
chromadb = ">=1.0.0"
streamlit = ">=1.35.0"
ragas = ">=0.2.0"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
