[tool.poetry]
name = "rag-document-assistant"
version = "0.1.0"
description = "Local RAG document assistant"
authors = ["rag-team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
paddleocr = ">=3.5.0,<3.6.0"
paddlex = {version = ">=3.5.1,<3.6.0", extras = ["ocr"]}
paddlepaddle = "3.3.0"
pymupdf = ">=1.24.0"
opencv-python-headless = ">=4.10.0"
numpy = "1.26.4"
beautifulsoup4 = ">=4.12.0"
sentence-transformers = ">=3.0.0"
transformers = ">=4.44.0,<5.0.0"
torch = ">=2.3,<2.8"
torchvision = ">=0.18,<0.23"
langchain-text-splitters = ">=0.2.0"
chromadb = ">=1.0.0"
streamlit = ">=1.35.0"
ragas = ">=0.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
